# trabalho-3-rafasfz

./: CMakeLists.txt  README.md  main
data/: erro1.txt  maze1.txt  maze2.txt
include/: Level.h  Player.h  Snake.h  SnakeGame.h
src/: Level.cpp  Player.cpp  Snake.cpp  SnakeGame.cpp  Snaze.cpp
